syntax = "proto3";
package proto;
option go_package = "../pb";

import "proto/common.proto";

service DetectRuntimeService {
  rpc DetectRuntime(ServiceInputString) returns (ServiceOutputString);
}